# squat-game

./: README.md  __main__.py  cooltime.py  entity.py  make_title.py  pyproject.toml  ringfit_adventure-0.0.3-py3-none-any.whl  squat.py  textbox.py  util_func.py
squat_game/: __init__.py  __main__.py  cooltime.py  entity.py  make_title.py  squat.py  textbox.py  util_func.py
